--- a/index.html
+++ b/index.html
@@ -2,55 +2,88 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>I Love U, Disty</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>I Love U Disty</title>
   <style>
     body {
-      background-color: #ffe6f0;
-      font-family: 'Segoe UI', sans-serif;
-      color: #333;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      background-image: url('https://i.imgur.com/uqtuAkj.jpg'); /* Foto Disty */
+      background-size: cover;
+      background-position: center;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      color: white;
       text-align: center;
-      padding: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      backdrop-filter: brightness(60%);
     }
-    h1 {
-      color: #d6336c;
-      font-size: 3em;
-    }
-    p {
+
+    .container {
       max-width: 700px;
-      margin: 20px auto;
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.5);
+      border-radius: 20px;
+    }
+
+    h1 {
+      font-size: 3em;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
+    #typing {
       font-size: 1.2em;
-      line-height: 1.8;
+      line-height: 1.7em;
+      font-weight: 600;
+      white-space: pre-line;
     }
-    .heart {
-      font-size: 3rem;
-      color: red;
-      animation: beat 1s infinite;
-    }
-    @keyframes beat {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.2); }
+
+    audio {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <div class="heart">❤️</div>
-  <h1>Terima Kasih, Disty</h1>
-  <p>
-    Aku cuma mau bilang... makasih banget ya udah bertahan sejauh ini sama aku. Terima kasih karena kamu tetap di sini, nemenin hari-hari aku yang kadang chaos, kadang lucu, kadang random. Kamu selalu berhasil bikin hari-hariku jadi lebih tenang, lebih hangat, dan lebih berwarna.
-  </p>
-  <p>
-    Mungkin aku nggak selalu sempurna. Mungkin kadang aku susah diatur, terlalu cuek, atau kadang nyebelin. Tapi satu hal yang pasti — aku bersyukur banget punya kamu. Kamu spesial banget buat aku, Disty. Aku bangga karena kamu tetap jadi kamu.
-  </p>
-  <p>
-    Halaman ini sederhana, tapi dari hati aku yang paling dalam, aku mau bilang: aku sayang banget sama kamu. Semoga setiap kita buka halaman ini, ada lagu *Sempurna* yang mengalun sebagai pengingat bahwa kamu sempurna bagiku 💞
-  </p>
-  <div class="heart">💖</div>
+  <div class="container">
+    <h1>Untuk Kamu, Disty</h1>
+    <p id="typing"></p>
+  </div>
 
-  <iframe 
-    src="https://archive.org/embed/AndraAndTheBackboneSempurna_201811" 
-    style="position:absolute; width:1px; height:1px; left:-1000px;" 
-    allow="autoplay">
-  </iframe>
+  <!-- Lagu Sempurna -->
+  <audio autoplay loop>
+    <source src="https://audio.jukehost.co.uk/S9AHB6Lf5pAkkv1y5zQ0BplRbhzBPbls" type="audio/mpeg">
+    Browser kamu tidak mendukung audio.
+  </audio>
+
+  <!-- Script Efek Mengetik -->
+  <script>
+    const text = `Makasih ya udah mau nemenin aku sejauh ini. 
+Meskipun hubungan kita masih virtual, tapi rasanya bener-bener nyata di hati aku. 
+Kamu tuh beda, kamu sabar, kamu hangat, dan kamu bikin hari-hari aku jauh lebih berarti.
+
+Aku gak tau harus gimana kalau gak ada kamu. 
+Aku mungkin gak sempurna, tapi aku selalu mau belajar jadi lebih baik buat kamu. 
+Terima kasih udah percaya, udah bertahan, udah jadi bagian paling indah di hidupku.
+
+Aku sayang kamu, Disty. Banget.`;
+
+    let i = 0;
+    const speed = 40;
+    const typingElement = document.getElementById("typing");
+
+    function typeWriter() {
+      if (i < text.length) {
+        typingElement.innerHTML += text.charAt(i);
+        i++;
+        setTimeout(typeWriter, speed);
+      }
+    }
+
+    window.onload = typeWriter;
+  </script>
 </body>
 </html>
