--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       height: 100vh;
-      background-image: url('https://i.imgur.com/uqtuAkj.jpg'); /* Foto Disty */
+      background-image: url('https://i.imgur.com/uqtuAkj.jpg'); /* Gambar Disty */
       background-size: cover;
       background-position: center;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -59,7 +59,7 @@
     Browser kamu tidak mendukung audio.
   </audio>
 
-  <!-- Script Efek Mengetik -->
+  <!-- Efek Ngetik -->
   <script>
     const text = `Makasih ya udah mau nemenin aku sejauh ini. 
 Meskipun hubungan kita masih virtual, tapi rasanya bener-bener nyata di hati aku. 
