--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       height: 100vh;
-      background-image: url('https://i.imgur.com/uqtuAkj.jpg'); /* Gambar Disty */
+      background-image: url('https://i.imgur.com/uqtuAkj.jpg');
       background-size: cover;
       background-position: center;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -53,11 +53,10 @@
     <p id="typing"></p>
   </div>
 
-  <!-- Lagu Sempurna -->
+  <!-- Lagu Sempurna (link aktif) -->
   <audio autoplay loop>
-    <source src="https://audio.jukehost.co.uk/S9AHB6Lf5pAkkv1y5zQ0BplRbhzBPbls" type="audio/mpeg">
-    Browser kamu tidak mendukung audio.
-  </audio>
+    <source src="https://audio.jukehost.co.uk/EP0TxaPq3YuAHRDXzFJzq3PvGbDnK3GZ" type="audio/mpeg"
+      </audio<
 
   <!-- Efek Ngetik -->
   <script>
