--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 
   <!-- Lagu Sempurna (link aktif) -->
   <audio autoplay loop>
-    <source src="https://audio.jukehost.co.uk/EP0TxaPq3YuAHRDXzFJzq3PvGbDnK3GZ" type="audio/mpeg"
-      </audio<
+    <source src="https://audio.jukehost.co.uk/EP0TxaPq3YuAHRDXzFJzq3PvGbDnK3GZ" type="audio/mpeg">
+    Browser kamu tidak mendukung audio.
+  </audio>
 
   <!-- Efek Ngetik -->
   <script>
