--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
       white-space: pre-line;
     }
 
-    audio {
-      display: none;
+    iframe {
+      margin-top: 30px;
+      border-radius: 10px;
     }
   </style>
 </head>
@@ -51,13 +52,17 @@
   <div class="container">
     <h1>Untuk Kamu, Disty</h1>
     <p id="typing"></p>
-  </div>
 
-  <!-- Lagu Sempurna (link aktif) -->
-  <audio autoplay loop>
-    <source src="https://audio.jukehost.co.uk/EP0TxaPq3YuAHRDXzFJzq3PvGbDnK3GZ" type="audio/mpeg">
-    Browser kamu tidak mendukung audio.
-  </audio>
+    <!-- 🎵 Lagu To The Bone (instrumental cover SoundCloud) -->
+    <iframe 
+      width="100%" 
+      height="166" 
+      scrolling="no" 
+      frameborder="no" 
+      allow="autoplay" 
+      src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/ridho-kusumo-hariadi/pamungkas-to-the-bone-instrumental-cover&color=%23ff5500&auto_play=true">
+    </iframe>
+  </div>
 
   <!-- Efek Ngetik -->
   <script>
